fix(): feature product

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 body{
   font-family: 'Poppins', sans-serif;
 }
-
 .container {
   max-width: 1300px;
   margin: auto;
@@ -65,6 +64,46 @@ padding: 50px 0;
   margin: 30px 0;
   border-radius: 30px;
 }
-.btn:hover{
+.btn :hover{
   background: #563434;
+}
+.grid{
+  margin: 70px 0;
+}
+.col-3{
+flex-basis: 30px;
+min-width: 250px;
+margin-bottom: 30px;
+}
+.col-3 img{
+  width: 100%;
+}
+.small-container{
+  max-width: 1080px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.col-4{
+  flex-basis: 25%;
+  padding: 10px;
+  min-width: 200px;
+  margin-bottom: 50px;
+}
+.col-4 img{
+  max-width: 100%;
+}
+.title{
+  text-align: center;
+  margin: 0 auto 70px;
+  position: relative;
+  line-height: 60px;
+  color: #555;
+}
+h4{
+color: #555;
+font-weight: normal;
+}
+.col-4 p{
+  font-size: 14px;
 }
