fix(): Smart Band section

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
   padding: 0;
   box-sizing: border-box;
 }
-body{
-  font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
 }
 .container {
   max-width: 1300px;
@@ -37,76 +37,88 @@ a {
 p {
   color: #555;
 }
-.row{
+.row {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-.col-2{
+.col-2 {
   flex-basis: 50%;
   min-width: 300px;
 }
-.col-2 img{
-max-width: 100%;
-padding: 50px 0;
+.col-2 img {
+  max-width: 100%;
+  padding: 50px 0;
 }
-.col-2 h1{
+.col-2 h1 {
   font-size: 50px;
   line-height: 60px;
   margin: 25px 0;
 }
-.btn{
+.btn {
   display: inline-block;
   background: #ff523b;
-  color:#fff;
+  color: #fff;
   padding: 8px 30px;
   margin: 30px 0;
   border-radius: 30px;
 }
-.btn :hover{
+.btn :hover {
   background: #563434;
 }
-.grid{
+.grid {
   margin: 70px 0;
 }
-.col-3{
-flex-basis: 30px;
-min-width: 250px;
-margin-bottom: 30px;
+.col-3 {
+  flex-basis: 30px;
+  min-width: 250px;
+  margin-bottom: 30px;
 }
-.col-3 img{
+.col-3 img {
   width: 100%;
 }
-.small-container{
+.small-container {
   max-width: 1080px;
   margin: auto;
   padding-left: 25px;
   padding-right: 25px;
 }
-.col-4{
+.col-4 {
   flex-basis: 25%;
   padding: 10px;
   min-width: 200px;
   margin-bottom: 50px;
 }
-.col-4 img{
+.col-4 img {
   max-width: 100%;
 }
-.title{
+.title {
   text-align: center;
   margin: 0 auto 70px;
   position: relative;
   line-height: 60px;
   color: #555;
 }
-h4{
-color: #555;
-font-weight: normal;
+h4 {
+  color: #555;
+  font-weight: normal;
 }
-.col-4 p{
+.col-4 p {
   font-size: 14px;
 }
-.rating .fas{
-  color:#ff523b
+.rating .fas {
+  color: #ff523b;
 }
+.offer {
+  background: radial-gradient(#fff, #ffd6d6);
+  margin-top: 80px;
+  padding: 30px 0;
+}
+.col-2 .offer-img {
+  padding: 50px;
+}
+small{
+  color: #555 ;
+}
+
