--- a/style.css
+++ b/style.css
@@ -127,6 +127,12 @@ small{
 .testimonial .col-3{
   text-align: center;
   padding-top: 40px 20px;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  cursor: pointer;
+  transition: transform 0.5s;
+}
+.testimonial .col-3:hover{
+  transform: translate(-10px);
 }
 .testimonial .col-3 img{
   width: 50px;
