--- a/style.css
+++ b/style.css
@@ -118,38 +118,53 @@ h4 {
 .col-2 .offer-img {
   padding: 50px;
 }
-small{
-  color: #555 ;
+small {
+  color: #555;
 }
-.testimonial{
+.testimonial {
   padding-top: 100px;
 }
-.testimonial .col-3{
+.testimonial .col-3 {
   text-align: center;
   padding-top: 40px 20px;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
   cursor: pointer;
   transition: transform 0.5s;
 }
-.testimonial .col-3:hover{
+.testimonial .col-3:hover {
   transform: translate(-10px);
 }
-.testimonial .col-3 img{
+.testimonial .col-3 img {
   width: 50px;
   margin-top: 20px;
   border-radius: 50%;
 }
-.fas.fa-quote-left{
+.fas.fa-quote-left {
   font-size: 34px;
   color: #ff523b;
 }
-.col-3 p{
+.col-3 p {
   font-size: 12px;
   margin: 12px 0;
   color: #777;
 }
-.testimonial .col-3 h3{
+.testimonial .col-3 h3 {
   font-weight: 600;
   color: #555;
   font-size: 16px;
+}
+
+.brands {
+  margin: 100px auto;
+}
+.col-5 {
+  width: 160px;
+}
+.col-5 img {
+  width: 100%;
+  cursor: pointer;
+  filter: grayscale(100%);
+}
+.col-5 img:hover{
+  filter: grayscale(0);
 }
