--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+
+/******* Navbar ******/
 .container {
   max-width: 1300px;
   margin: auto;
@@ -78,6 +80,9 @@ p {
 .col-3 img {
   width: 100%;
 }
+
+
+/******* Feature Products ******/
 .small-container {
   max-width: 1080px;
   margin: auto;
@@ -93,6 +98,9 @@ p {
 .col-4 img {
   max-width: 100%;
 }
+
+
+/******* Latest Products ******/
 .title {
   text-align: center;
   margin: 0 auto 70px;
@@ -110,6 +118,9 @@ h4 {
 .rating .fas {
   color: #ff523b;
 }
+
+
+/******* Offer ******/
 .offer {
   background: radial-gradient(#fff, #ffd6d6);
   margin-top: 80px;
@@ -121,6 +132,9 @@ h4 {
 small {
   color: #555;
 }
+
+
+/******* Testimonial ******/
 .testimonial {
   padding-top: 100px;
 }
@@ -154,6 +168,8 @@ small {
   font-size: 16px;
 }
 
+
+/******* Testimonial ******/
 .brands {
   margin: 100px auto;
 }
