--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ p {
   width: 100%;
 }
 
-
 /******* Feature Products ******/
 .small-container {
   max-width: 1080px;
@@ -98,7 +97,6 @@ p {
 .col-4 img {
   max-width: 100%;
 }
-
 
 /******* Latest Products ******/
 .title {
@@ -119,7 +117,6 @@ h4 {
   color: #ff523b;
 }
 
-
 /******* Offer ******/
 .offer {
   background: radial-gradient(#fff, #ffd6d6);
@@ -132,7 +129,6 @@ h4 {
 small {
   color: #555;
 }
-
 
 /******* Testimonial ******/
 .testimonial {
@@ -168,8 +164,7 @@ small {
   font-size: 16px;
 }
 
-
-/******* Testimonial ******/
+/******* Brands ******/
 .brands {
   margin: 100px auto;
 }
@@ -181,6 +176,62 @@ small {
   cursor: pointer;
   filter: grayscale(100%);
 }
-.col-5 img:hover{
+.col-5 img:hover {
   filter: grayscale(0);
+}
+
+/******* Footer ******/
+.footer {
+  background: #000;
+  color: #8a8a8a;
+  font-size: 14px;
+  padding: 60px 0 20px;
+}
+.footer p {
+  color: #8a8a8a;
+}
+.footer h3 {
+  color: #fff;
+  margin-bottom: 20px;
+}
+.footer-col-1,
+.footer-col-2,
+.footer-col-3,
+.footer-col-4 {
+  min-width: 250px;
+  margin-bottom: 20px;
+}
+.footer-col-1 {
+  flex-basis: 30%;
+}
+.footer-col-2 {
+  flex: 1;
+  text-align: center;
+}
+.footer-col-1 img {
+  width: 180px;
+  margin-bottom: 20px;
+}
+.footer-col-3,
+.footer-col-4 {
+  flex-basis: 12%;
+  text-align: center;
+}
+ul {
+  list-style-type: none;
+}
+.app-logo {
+  margin-top: 20px;
+}
+.app-logo img {
+  width: 140px;
+}
+.footer hr{
+  border: none;
+  background: #b5b5b5;
+  height: 1px;
+  margin: 20px 0;
+}
+.copyright{
+  text-align: center;
 }
